[ADD] Get role by name comtroller
